Change a label of the HTML5 multiple file chooser to "Choose One or More Files".

Add "default:" to the WebLocalizedString switch statement in ToMessageID(). This is needed to avoid compiler warnings about enum coverage when we add new symbols to WebLocalizedString.h. This "default:" is going to be removed when a planned WebLocalizedString.h change is merged.

BUG=https://bugs.webkit.org/show_bug.cgi?id=49245
TEST=No change in behavior


Review URL: http://codereview.chromium.org/7273024

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@91051 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 9a08908fbe72c1e6cc0f9127cde5d758272ab197